--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="https://drive.google.com/file/d/1YFO7MwDrzwCaN3WbUdXKv5iE_F6P0eiw/view?usp=sharing" target="_blank" rel="noopener noreferrer"><span>CV</span></a>
+                        <a class="nav-link " href="https://drive.google.com/file/d/1Nn5Ks8j_oR7u648_tHZl2UVQqu8_XjaA/view?usp=drivesdk" target="_blank" rel="noopener noreferrer"><span>CV</span></a>
                     </li>
 
                 </ul>
