--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             Machine Learning Engineer
                         </h3>
                         <div>
-                            <span class="article-header">R&D Product Development Planning team<br><a href="https://research.samsung.com/srbd" target="_blank" rel="noopener noreferrer">Samsung R&D Institute</a></span>
+                            <span class="article-header">R&D Wearable Solution Team<br><a href="https://research.samsung.com/srbd" target="_blank" rel="noopener noreferrer">Samsung R&D Institute</a></span>
                         </div>
                         <div class="article-metadata">
                             <span class="article-date">
@@ -291,7 +291,7 @@
                         </div>
                         <div class="article-metadata">
                             <span class="article-date">
-                            December, 2021 - July, 2023.
+                            December, 2021 - July, 2023. (5th-8th semester in academic)
                         </span>
                             <span class="middot-divider"></span>
                         </div>
@@ -339,6 +339,32 @@
                 <div class="col-12 col-lg-8">
                     <div class="card-simple">
                         <h3 class="article-title mb-1 mt-3">
+                            Digital Biomarker Modeling for Dementia
+                        </h3>
+
+                        <div class="article-style">
+                            <p>
+                                This research project conducted on digital biomarker modeling for the early detection of Mild Cognitive Impairment (MCI) and Alzheimer’s disease using multimodal data collected from mobile and wearable devices. The work focused on extracting behavioral and physiological signals (e.g., activity patterns, movement variability, and temporal features) as potential digital biomarkers. I performed extensive data preprocessing and exploratory analysis using Pandas and Kotlin DataFrame, applied statistical analysis to identify discriminative features, and developed classification models to distinguish healthy subjects from MCI and Alzheimer’s patients. The research emphasized data quality, feature engineering, and evaluation of model performance to assess the feasibility of mobile and wearable sensing as scalable tools for cognitive health monitoring.                            </p>
+                            </p>
+                        </div>
+
+                        <div style="text-align: left;">
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Digital Biomarkers</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Dementia Research</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Alzheimer’s Disease</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Mild Cognitive Impairment (MCI)</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Wearable Data Analysis</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Mobile Sensing</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Time-Series Analysis</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Statistical Analysis</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Classification Models</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Health AI</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">Biomedical Data Science</span>
+                            <span style="display: inline-block; margin: 2px; padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; background-color: #f5f5f5; font-size: 12px;">On Device ML</span>
+                        </div>
+                    </div>
+                    <div class="card-simple">
+                        <h3 class="article-title mb-1 mt-3">
                             Automated Test Case Creation from UI Guide using Gen AI
                         </h3>
 
@@ -369,7 +395,7 @@
 
                     <div class="card-simple">
                         <h3 class="article-title mb-1 mt-3">
-                            ✋ Hand Gesture Recognition
+                            Hand Gesture Recognition
                         </h3>
                             <div class="article-style">
                                     <ul>
